
* The default SMT solver is now SMTInterpol,
  which is written in Java and available on all platforms.
  MathSAT5 continues to be used for configurations
  that SMTInterpol does not support.

* The SMT solver Princess (http://www.philipp.ruemmer.org/princess.shtml)
  has been integrated into CPAchecker's predicate analysis
  and can be selected with cpa.predicate.solver=princess

* The configuration files for value analysis have been renamed.
  Instead of -explicitAnalysis or similar,
  you now need to use -valueAnalysis.


Changes from CPAchecker 1.2 to CPAchecker 1.3.4
-----------------------------------------------

Main changes:

* Conditional Model Checking (CMC)
  The flexibility of sequential combinations of analyses inside CPAchecker has been extended.
  A configuration based on this won two categories of SV-COMP'14
  and a silver medal in the category Overall
  (cf. http://sv-comp.sosy-lab.org/2014/results/).

* Symbolic Memory Graphs (SMG)
  An analysis that models the heap precisely as SMGs has been added
  and can be used for finding memory violations.
  It won the category MemorySafety of SV-COMP'14
  (cf. http://sv-comp.sosy-lab.org/2014/results/).

* Precision Reuse
  The explicit-value analysis and the predicate analysis have gained support for precision reuse,
  a technique that allows much faster regression verification,
  i.e., verification of a new version of a program
  (cf. "Precision Reuse for Efficient Regression Verification".
  Dirk Beyer, Stefan Löwe, Evgeny Novikov, Andreas Stahlbauer, and Philipp Wendler.
  In Proc. ESEC/FSE, ACM, 2013).

* Domain Types
  A suitable abstract domain can be selected automatically
  depending on the usage pattern of each variable,
  for example a BDD or explicit-value analysis
  (cf. "Domain Types: Abstract-Domain Selection Based on Variable Usage".
  Sven Apel, Dirk Beyer, Karlheinz Friedberger, Franco Raimondi, and Alexander von Rhein.
  In Proc. HVC, LNCS 8244, Springer, 2013).

* k-Induction