@@ -1,7 +1,7 @@
 // This file contains all the necessary options to make an existing PredicateCPA bitprecise.
 
 // MathSAT is the only SMT solver that supports Bitvectors+Floats
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 
 // Use bitvectors in formulas instead of real variables.
 cpa.predicate.encodeBitvectorAs = BITVECTOR
