@@ -16,7 +16,7 @@ cpa.predicate.precision.sharing=FUNCTION
 cpa.predicate.handlePointerAliasing=False
 cpa.predicate.handleArrays=True
 
-cpa.predicate.solver=Z3
+solver.solver=Z3
 
 cpa.predicate.blk.alwaysAtFunctionHeads=False
 cpa.predicate.blk.alwaysAtEntryFunctionHead=True
