@@ -11,10 +11,12 @@ cpa.reportFalseAsUnknown=true
 [cfa]
 findLiveVariables = true
 
+[solver]
+solver = Z3
+z3.requireProofs = false
+
 [cpa.predicate]
 ignoreIrrelevantVariables = true
-solver = Z3
-solver.z3.requireProofs = false
 maxArrayLength = 3
 defaultArrayLength = 3
 
