@@ -12,9 +12,10 @@ order = bfs
 useReversePostorder = true
 useCallstack = true
 
+solver.solver = Z3
+
 [cpa.predicate]
 ignoreIrrelevantVariables = true
-solver = Z3
 maxArrayLength = 3
 defaultArrayLength = 3
 
