@@ -27,7 +27,7 @@ cpa.bounds.maxLoopIterations = 1
 # increment the bound by one in every iteration of deepening
 cpa.bounds.maxLoopIterationAdjusterFactory = INCREMENT
 
-cpa.predicate.solver = SMTInterpol
+solver.solver = SMTInterpol
 cpa.predicate.encodeFloatAs = RATIONAL
 
 cpa.callstack.depth=1
