@@ -34,5 +34,5 @@ cpa.arg.errorPath.file = ErrorPath.txt
 
 cpa.predicate.handlePointerAliasing = false
 
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
