@@ -28,5 +28,5 @@ statistics.memory = false
 analysis.summaryEdges = true
 cpa.callstack.skipRecursion = true
 
-cpa.predicate.solver = MathSAT5
+solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
