@@ -48,5 +48,6 @@ cpa.callstack.skipFunctionPointerRecursion = true
 # enable float handling in predicate analysis
 cpa.predicate.encodeFloatAs = FLOAT
 
-cpa.predicate.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
+
+solver.solver = MathSAT5
