@@ -6,7 +6,7 @@ analysis.algorithm.CBMC=false
 analysis.algorithm.proofCheck=false
 analysis.checkCounterexamples=false
 statistics.file=Statistics.txt
-cpa.predicate.solver=smtinterpol
+solver.solver=smtinterpol
 memorysafety.check=false
 limits.time.cpu=-1ns
 cpa.conditions.global.time.cpu=-1
